--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -24,6 +24,7 @@
             <td th:text="${product.productQuantity}"></td>
             <td>
                 <a th:href="@{'/product/edit/' + ${product.productId}}" class="btn btn-sm btn-outline-primary">Edit</a>
+                <a th:href="@{'/product/delete/' + ${product.productId}}" class="btn btn-sm btn-outline-danger" onclick="return confirm('Are you sure you want to delete this product?')">Delete</a>
             </td>
         </tr>
         </tbody>
