--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="container my-2">
-    <h2>Product' List</h2>
+    <h2>Product List</h2>
     <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3">Create Product</a>
 
     <table border="1" class="table table-striped table-responsive-md">
@@ -24,7 +24,9 @@
             <td th:text="${product.productQuantity}"></td>
             <td>
                 <a th:href="@{'/product/edit/' + ${product.productId}}" class="btn btn-sm btn-outline-primary">Edit</a>
-                <a th:href="@{'/product/delete/' + ${product.productId}}" class="btn btn-sm btn-outline-danger" onclick="return confirm('Are you sure you want to delete this product?')">Delete</a>
+                <form th:action="@{'/product/delete/' + ${product.productId}}" method="post" style="display:inline;">
+                    <button type="submit" class="btn btn-sm btn-outline-danger" onclick="return confirm('Are you sure you want to delete this product?')">Delete</button>
+                </form>
             </td>
         </tr>
         </tbody>
